--- a/demo-non-spring/pom.xml
+++ b/demo-non-spring/pom.xml
@@ -10,6 +10,7 @@
     <properties>
         <log4j.version>2.17.1</log4j.version>
         <slf4j.version>1.7.28</slf4j.version>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
@@ -45,6 +46,18 @@
             <version>${log4j.version}</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
